syntax = "proto3";

package io.restorecommerce.notification_channel;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";

// Message structure for Notification Channel
service NotificationChannelService {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (NotificationChannelListResponse);
  rpc Create (NotificationChannelList) returns (NotificationChannelListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (NotificationChannelList) returns (NotificationChannelListResponse);
  rpc Upsert (NotificationChannelList) returns (NotificationChannelListResponse);
}

message Deleted {
  optional string id = 1;
}

message NotificationChannelList {
  repeated NotificationChannel items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.auth.Subject subject = 3;
}

message NotificationChannelListResponse {
  repeated NotificationChannelResponse items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}

message NotificationChannelResponse {
  optional NotificationChannel items = 1;
  optional io.restorecommerce.status.Status status = 2;
}

message NotificationChannel {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string name = 3;
  optional string description = 4;
  oneof configuration_type {
    string email = 5;
    string sms = 6;
    string webhook = 7;
  }
}
